--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -1,5 +1,9 @@
 @layer components {
     .btn-primary {
-      @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:ring-opacity-75;
+      @apply text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
+    }
+
+    .btn-secondary {
+      @apply text-white bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
     }
   }
