--- a/src/css/custom-base-styles.css
+++ b/src/css/custom-base-styles.css
@@ -31,7 +31,7 @@
 *******************/
 
 .dropdown-toggle {
-    @apply flex items-center gap-2 bg-white px-5 py-2.5 rounded-md shadow;
+    @apply flex items-center gap-2 bg-white px-5 py-2.5 rounded-md shadow font-semibold;
 }
 
 .dropdown-option {
