--- a/src/css/custom-base-styles.css
+++ b/src/css/custom-base-styles.css
@@ -33,11 +33,14 @@
 *******************/
 
 .dropdown-toggle {
-  @apply flex items-center text-white gap-2 bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 px-5 py-2.5 rounded-md shadow font-semibold;
+  @apply flex items-center text-white gap-2 bg-gradient-to-r from-cyan-400 
+  via-cyan-500 to-cyan-600 px-5 py-2.5 rounded-md shadow font-semibold;
 }
 
 .dropdown-option {
-  @apply flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500;
+  @apply flex items-center gap-2 w-full first-of-type:rounded-t-md 
+  last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm 
+  hover:bg-gray-50 disabled:text-gray-500 cursor-pointer;
 }
 
 .mobile-menu {
