--- a/src/css/custom-components.css
+++ b/src/css/custom-components.css
@@ -5,7 +5,7 @@
 }
 
 .custom-form-label {
-  @apply text-slate-900 text-sm font-semibold dark:text-slate-200;
+  @apply text-slate-900 text-xs md:text-sm font-semibold dark:text-slate-200 w-full max-w-[220px];
 }
 
 .checkbox-wrapper,
@@ -13,13 +13,18 @@
   @apply flex items-center space-x-2;
 }
 
-.custom-input {
+.input-wrapper {
+  @apply w-full justify-start;
+}
+
+.custom-input { 
   @apply appearance-none border border-zinc-300 transition duration-150 ease-in-out
     bg-gray-50 text-gray-900 text-sm rounded-lg focus:outline-none
-    focus:ring-teal-500 focus:ring-2 focus:border-teal-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600
-    dark:placeholder-gray-400 dark:text-white dark:focus:ring-teal-500 dark:focus:border-teal-500;
+    focus:ring-teal-500 focus:ring-2 focus:border-teal-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600
+    dark:placeholder-gray-400 dark:text-white dark:focus:ring-teal-500 dark:focus:border-teal-500
+    max-w-[300px] w-full;
 }
 
 .custom-select {
-  @apply relative z-0 w-full py-2 pl-3 pr-10 text-left transition duration-150 ease-in-out bg-white border border-zinc-300 rounded-md cursor-default focus:ring-teal-500 focus:ring-2 focus:outline-none focus:border-teal-300 sm:text-sm sm:leading-5;
+  @apply relative z-0 max-w-[300px] w-full py-2 pl-3 pr-10 text-left transition duration-150 ease-in-out bg-white border border-zinc-300 rounded-md cursor-default focus:ring-teal-500 focus:ring-2 focus:outline-none focus:border-teal-300 sm:text-sm sm:leading-5;
 }
