server and build fix

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../dist/css/custom-tailwind.css" />
+  <link rel="stylesheet" href="../../css/main.css" />
   <!-- <script defer src="https://unpkg.com/alpinejs-component@latest/dist/component.min.js"></script> -->
-  <script defer src="../dist/js/main.js"></script>
+  <script defer src="../../js/main.js"></script>
   <title>Cloudcasting Network Config Generator</title>
 </head>
 
