--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,14 +1,112 @@
-@import "tailwindcss/base";
-@import "./custom-base-styles.css";
-
-@import "tailwindcss/components";
-@import "./custom-components.css";
-
-@import "tailwindcss/utilities";
-@import "./custom-utilities.css";
-
-
-/* 
 @tailwind base;
 @tailwind components;
-@tailwind utilities; */
+
+
+[x-cloak] {
+  display: none !important;
+}
+
+/****** Typo ******
+  *******************/
+
+.h1-elem {
+  @apply text-4xl text-base-black md:text-[2.5rem] font-bold leading-tight;
+}
+
+.h2-elem {
+  @apply text-base-black text-[2rem] md:text-4xl leading-tight;
+}
+
+.h3-elem {
+  @apply text-base-black text-[1.75rem] md:text-[2rem] leading-tight;
+}
+
+.h4-elem {
+  @apply text-base-black text-2xl md:text-[1.75rem] leading-tight;
+}
+
+.h5-elem {
+  @apply text-base-black text-xl md:text-2xl leading-tight;
+}
+
+.h6-elem {
+  @apply text-base-black text-base md:text-xl leading-tight;
+}
+
+/****** Dropdown ******
+  *******************/
+
+.dropdown-toggle {
+  @apply flex items-center text-white gap-2 bg-gradient-to-r from-cyan-400 
+    via-cyan-500 to-cyan-600 px-5 py-2.5 rounded-md shadow font-semibold;
+}
+
+.dropdown-option {
+  @apply flex items-center gap-2 w-full first-of-type:rounded-t-md 
+    last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm 
+    hover:bg-gray-50 disabled:text-gray-500 cursor-pointer;
+}
+
+.mobile-menu {
+  left: -200%;
+  transition: 0.5s;
+}
+
+.mobile-menu.active {
+  @apply left-0;
+}
+
+.mobile-menu ul li ul {
+  @apply hidden;
+}
+
+.mobile-menu ul li:hover ul {
+  @apply block;
+}
+/****** Buttons ******
+  *******************/
+
+@layer components {
+  .btn-primary {
+    @apply text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
+  }
+
+  .btn-secondary {
+    @apply text-white bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
+  }
+
+  .btn-cyan {
+    @apply text-xs text-white bg-gradient-to-r from-cyan-500 to-teal-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-full  px-5 py-2.5 text-center mr-2 mb-2;
+  }
+}
+
+.custom-checkbox {
+  @apply w-4 h-4 accent-green checked:text-white rounded focus:ring-green dark:focus:ring-green dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600;
+}
+
+.custom-form-label {
+  @apply text-slate-900 text-xs md:text-sm font-semibold dark:text-slate-200 w-full max-w-[220px];
+}
+
+.checkbox-wrapper,
+.input-wrapper {
+  @apply flex items-center space-x-2;
+}
+
+.input-wrapper {
+  @apply w-full justify-start;
+}
+
+.custom-input {
+  @apply appearance-none border border-zinc-300 transition duration-150 ease-in-out
+    bg-gray-50 text-gray-900 text-sm rounded-lg focus:outline-none
+    focus:ring-teal-500 focus:ring-2 focus:border-teal-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600
+    dark:placeholder-gray-400 dark:text-white dark:focus:ring-teal-500 dark:focus:border-teal-500
+    max-w-[300px] w-full;
+}
+
+.custom-select {
+  @apply relative z-0 max-w-[300px] w-full py-2 pl-3 pr-10 text-left transition duration-150 ease-in-out bg-white border border-zinc-300 rounded-md cursor-default focus:ring-teal-500 focus:ring-2 focus:outline-none focus:border-teal-300 sm:text-sm sm:leading-5;
+}
+
+@tailwind utilities;
