favicon added, menu js commented,  layout fix

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,48 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/main.css" />
   <script defer src="./js/main.js"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <title>Cloudcasting Network Config Generator</title>
 </head>
 
 <body x-data="app" class="flex flex-col min-h-screen antialiased">
-  <header class='bg-hero w-full bg-cover bg-center flex flex-col justify-center'>
+  <header class='bg-hero w-full bg-cover bg-center flex flex-col justify-center py-4'>
     <div class="bg-black/50 w-full">
       <hr class="border-blue/90 border-2" />
-      <section class="bg-gradient-to-r from-teal-200/80 to-emerald-800/80 py-8">
+      <section class="bg-gradient-to-r from-teal-200/80 to-emerald-800/80 py-4">
         <div class="container mx-auto flex justify-center items-center flex-col py-5 text-center px-4">
-          <div class="flex items-center">
-            <span class="mr-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 1920 1792">
-                <path fill="#fff" d="M896 896q0-106-75-181t-181-75t-181 75t-75 181t75 181t181 75t181-75t75-181zm768 512q0-52-38-90t-90-38t-90 38t-38 90q0 53 37.5 90.5t90.5 37.5t90.5-37.5t37.5-90.5zm0-1024q0-52-38-90t-90-38t-90 38t-38 90q0 53 37.5 90.5T1536 512t90.5-37.5T1664 384zm-384 421v185q0 10-7 19.5t-16 10.5l-155 24q-11 35-32 76q34 48 90 115q7 11 7 20q0 12-7 19q-23 30-82.5 89.5T999 1423q-11 0-21-7l-115-90q-37 19-77 31q-11 108-23 155q-7 24-30 24H547q-11 0-20-7.5t-10-17.5l-23-153q-34-10-75-31l-118 89q-7 7-20 7q-11 0-21-8q-144-133-144-160q0-9 7-19q10-14 41-53t47-61q-23-44-35-82l-152-24q-10-1-17-9.5T0 987V802q0-10 7-19.5T23 772l155-24q11-35 32-76q-34-48-90-115q-7-11-7-20q0-12 7-20q22-30 82-89t79-59q11 0 21 7l115 90q34-18 77-32q11-108 23-154q7-24 30-24h186q11 0 20 7.5t10 17.5l23 153q34 10 75 31l118-89q8-7 20-7q11 0 21 8q144 133 144 160q0 8-7 19q-12 16-42 54t-45 60q23 48 34 82l152 23q10 2 17 10.5t7 19.5zm640 533v140q0 16-149 31q-12 27-30 52q51 113 51 138q0 4-4 7q-122 71-124 71q-8 0-46-47t-52-68q-20 2-30 2t-30-2q-14 21-52 68t-46 47q-2 0-124-71q-4-3-4-7q0-25 51-138q-18-25-30-52q-149-15-149-31v-140q0-16 149-31q13-29 30-52q-51-113-51-138q0-4 4-7q4-2 35-20t59-34t30-16q8 0 46 46.5t52 67.5q20-2 30-2t30 2q51-71 92-112l6-2q4 0 124 70q4 3 4 7q0 25-51 138q17 23 30 52q149 15 149 31zm0-1024v140q0 16-149 31q-12 27-30 52q51 113 51 138q0 4-4 7q-122 71-124 71q-8 0-46-47t-52-68q-20 2-30 2t-30-2q-14 21-52 68t-46 47q-2 0-124-71q-4-3-4-7q0-25 51-138q-18-25-30-52q-149-15-149-31V314q0-16 149-31q13-29 30-52q-51-113-51-138q0-4 4-7q4-2 35-20t59-34t30-16q8 0 46 46.5t52 67.5q20-2 30-2t30 2q51-71 92-112l6-2q4 0 124 70q4 3 4 7q0 25-51 138q17 23 30 52q149 15 149 31z" />
-              </svg>
-            </span>
-          </div>
           <h2 class="h2-elem text-white" style="text-shadow: 0 5px 5px rgb(0 0 0 / 30%);">MPX/ISR & Android network configurator</h2>
           <p class="text-lg text-white uppercase font-semibold py-5" style="text-shadow: 0 5px 5px rgb(0 0 0 / 30%);">
             You have to connect your device to the internet to enable content
             updates.<br>This tool will help you create the necessary configuration
             file for your setup.
           </p>
-          <h3 class="h3-elem text-cyan-100" style="text-shadow: 0 5px 5px rgb(0 0 0 / 30%);">
-            Please select your device
-          </h3>
-          <div x-data="dropdown" x-on:keydown.escape.prevent.stop="close($refs.button)" x-on:focusin.window="! $refs.panel.contains($event.target) && close()" x-id="['dropdown-button']" class="relative">
-            <!-- Button -->
-            <button x-ref="button" @click="toggle()" :aria-expanded="open" :aria-controls="$id('dropdown-button')" type="button" class="dropdown-toggle mt-9 bg-teal-400 px-12 py-3 rounded-3xl hover:bg-teal-500 text-white">
-              <span x-text="device_type"></span>
-              <!--chevron-down -->
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-              </svg>
-            </button>
-            <!-- Panel -->
-            <div x-ref="panel" x-show="open" x-transition.origin.top.left @click.outside="close($refs.button)" :id="$id('dropdown-button')" style="display: none" class="absolute left-0 mt-2 w-full rounded-md bg-white shadow-md">
-              <div x-show="device_type != 'All'" @click="handleAll, close($refs.button)" class="dropdown-option" x-text="device_all">All</div>
-              <div @click="handleIsr, close($refs.button)" class="dropdown-option" x-text="device_isr">MPX/ISR </div>
-              <div @click="handleAndroid, close($refs.button)" class="dropdown-option" x-text="device_android">Android </div>
-            </div>
-          </div>
-
         </div>
       </section>
     </div>
@@ -55,8 +30,31 @@
   <main class="container px-4 py-10 mx-auto">
     <!-- Page content goes here -->
     <section>
-
-      <div class="xl:flex justify-between items-center">
+      <div class="w-full">
+        <h3 class="h3-elem text-zinc-400 flex items-center" style="text-shadow: 0 5px 5px rgb(0 0 0 / 30%);">
+          <svg class="mr-3" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 1920 1792">
+            <path fill="currentColor" d="M896 896q0-106-75-181t-181-75t-181 75t-75 181t75 181t181 75t181-75t75-181zm768 512q0-52-38-90t-90-38t-90 38t-38 90q0 53 37.5 90.5t90.5 37.5t90.5-37.5t37.5-90.5zm0-1024q0-52-38-90t-90-38t-90 38t-38 90q0 53 37.5 90.5T1536 512t90.5-37.5T1664 384zm-384 421v185q0 10-7 19.5t-16 10.5l-155 24q-11 35-32 76q34 48 90 115q7 11 7 20q0 12-7 19q-23 30-82.5 89.5T999 1423q-11 0-21-7l-115-90q-37 19-77 31q-11 108-23 155q-7 24-30 24H547q-11 0-20-7.5t-10-17.5l-23-153q-34-10-75-31l-118 89q-7 7-20 7q-11 0-21-8q-144-133-144-160q0-9 7-19q10-14 41-53t47-61q-23-44-35-82l-152-24q-10-1-17-9.5T0 987V802q0-10 7-19.5T23 772l155-24q11-35 32-76q-34-48-90-115q-7-11-7-20q0-12 7-20q22-30 82-89t79-59q11 0 21 7l115 90q34-18 77-32q11-108 23-154q7-24 30-24h186q11 0 20 7.5t10 17.5l23 153q34 10 75 31l118-89q8-7 20-7q11 0 21 8q144 133 144 160q0 8-7 19q-12 16-42 54t-45 60q23 48 34 82l152 23q10 2 17 10.5t7 19.5zm640 533v140q0 16-149 31q-12 27-30 52q51 113 51 138q0 4-4 7q-122 71-124 71q-8 0-46-47t-52-68q-20 2-30 2t-30-2q-14 21-52 68t-46 47q-2 0-124-71q-4-3-4-7q0-25 51-138q-18-25-30-52q-149-15-149-31v-140q0-16 149-31q13-29 30-52q-51-113-51-138q0-4 4-7q4-2 35-20t59-34t30-16q8 0 46 46.5t52 67.5q20-2 30-2t30 2q51-71 92-112l6-2q4 0 124 70q4 3 4 7q0 25-51 138q17 23 30 52q149 15 149 31zm0-1024v140q0 16-149 31q-12 27-30 52q51 113 51 138q0 4-4 7q-122 71-124 71q-8 0-46-47t-52-68q-20 2-30 2t-30-2q-14 21-52 68t-46 47q-2 0-124-71q-4-3-4-7q0-25 51-138q-18-25-30-52q-149-15-149-31V314q0-16 149-31q13-29 30-52q-51-113-51-138q0-4 4-7q4-2 35-20t59-34t30-16q8 0 46 46.5t52 67.5q20-2 30-2t30 2q51-71 92-112l6-2q4 0 124 70q4 3 4 7q0 25-51 138q17 23 30 52q149 15 149 31z" />
+          </svg>
+          <span> Please select your device</span>
+        </h3>
+        <div x-data="dropdown" x-on:keydown.escape.prevent.stop="close($refs.button)" x-on:focusin.window="! $refs.panel.contains($event.target) && close()" x-id="['dropdown-button']" class="relative max-w-xs mb-10">
+          <!-- Button -->
+          <button x-ref="button" @click="toggle()" :aria-expanded="open" :aria-controls="$id('dropdown-button')" type="button" class="dropdown-toggle mt-9 bg-teal-400 px-12 py-3 rounded-3xl hover:bg-teal-500 text-white">
+            <span x-text="device_type"></span>
+            <!--chevron-down -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+            </svg>
+          </button>
+          <!-- Panel -->
+          <div x-ref="panel" x-show="open" x-transition.origin.top.left @click.outside="close($refs.button)" :id="$id('dropdown-button')" style="display: none" class="absolute left-0 mt-2 w-full rounded-md bg-white shadow-md">
+            <div x-show="device_type != 'All'" @click="handleAll, close($refs.button)" class="dropdown-option" x-text="device_all">All</div>
+            <div @click="handleIsr, close($refs.button)" class="dropdown-option" x-text="device_isr">MPX/ISR </div>
+            <div @click="handleAndroid, close($refs.button)" class="dropdown-option" x-text="device_android">Android </div>
+          </div>
+        </div>
+      </div>
+      <div class="lg:flex justify-between items-center max-w-3xl">
         <div>
           <div class="checkbox-wrapper">
             <input @click="dhcp_off = ! dhcp_off" class="custom-checkbox" type="checkbox" name="dhcp_off" value="" id="dhcp_off" />
