package-lock update

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div x-cloak x-show="all_config">
-        <section class="lg:flex justify-between items-center max-w-3xl mx-auto">
+        <section class="lg:flex justify-between items-start max-w-3xl mx-auto">
           <div>
             <div class="checkbox-wrapper">
               <input @click="dhcp_off = ! dhcp_off" class="custom-checkbox" type="checkbox" name="dhcp_off" value="" id="dhcp_off" />
